--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
+    "socket.io-client": "^4.7.2",
     "yup": "^0.32.11"
   },
   "scripts": {
