--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "homepage": "https://berrydashboard.io/main",
   "dependencies": {
     "@emotion/cache": "^11.9.3",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.88",
-    "@mui/material": "^5.8.6",
-    "@mui/system": "^5.8.6",
+    "@mui/material": "^5.14.20",
     "@mui/utils": "^5.8.6",
     "@tabler/icons": "^1.72.0",
     "apexcharts": "^3.35.3",
@@ -20,6 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-datepicker": "^4.24.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
