--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/utils": "^5.8.6",
     "@tabler/icons": "^1.72.0",
     "apexcharts": "^3.35.3",
+    "axios": "^1.6.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.16",
     "material-ui-popup-state": "^4.0.1",
@@ -27,6 +28,7 @@
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.0",
     "socket.io-client": "^4.7.2",
     "yup": "^0.32.11"
