--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.14.20",
     "@mui/utils": "^5.8.6",
+    "@table-library/react-table-library": "^4.1.7",
     "@tabler/icons": "^1.72.0",
     "apexcharts": "^3.35.3",
     "axios": "^1.6.2",
@@ -23,11 +24,13 @@
     "react-datepicker": "^4.24.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-file-viewer": "^0.5.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.2",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "^5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.0",
     "socket.io-client": "^4.7.2",
