notebutton component change, add report history field, edit routes

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.15.0",
     "@mui/utils": "^5.8.6",
+    "@mui/x-date-pickers": "^6.18.5",
+    "@table-library/react-table-library": "^4.1.7",
     "@tabler/icons": "^1.72.0",
     "apexcharts": "^3.35.3",
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
-    "axios": "^1.6.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.16",
     "material-ui-popup-state": "^4.0.1",
