--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-file-viewer": "^0.5.0",
+    "react-icons": "^4.12.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.2",
     "react-router": "6.3.0",
@@ -70,6 +71,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/eslint-parser": "^7.21.3",
+    "css-loader": "^6.8.1",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
@@ -81,6 +83,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "immutable": "^4.3.0",
     "prettier": "^2.8.7",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "style-loader": "^3.3.3"
   }
 }
