--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.15.0",
     "@mui/utils": "^5.8.6",
     "@mui/x-date-pickers": "^6.18.5",
+    "@mui/x-date-pickers-pro": "^6.18.5",
     "@table-library/react-table-library": "^4.1.7",
     "@tabler/icons": "^1.72.0",
     "apexcharts": "^3.35.3",
