--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-file-viewer": "^0.5.0",
     "react-icons": "^4.12.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.2",
     "react-router": "6.3.0",
     "react-router-dom": "^6.3.0",
