--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
+    "read-excel-file": "^5.7.1",
     "redux": "^4.2.0",
     "socket.io-client": "^4.7.2",
     "styled": "^1.0.0",
     "validator": "^13.11.0",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "scripts": {
